partial game functionality

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
   <div id="main-container" class="container" role="main">
     <div class="row m-2 h-100">
-      <section class="h-150 text-white bg-warning col-md-6 offset-md-1">
+      <section class="h-150 pt-5 text-white bg-warning col-md-6 offset-md-1">
         <header>
-          <h1>Crystal Collector !</h1>
+          <h2>CrystalsCollector!</h2>
         </header>
       </section>
     </div><!-- end row -->
@@ -69,40 +69,39 @@
         <h3>Rules:</h3>
         <p>You will be given a random number at the start of the game.</p>
         <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
-        <p>You win the game by matching your total score to the random number.</p>
-        <p>You lose the game if your total score goes above the random number.</p>
+        <p>You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</p>
         <p>The value of each crystal is hidden from you until you click on it.</p>
         <p>Each time when the game starts, the game will change the values of each crystal.</p>
       </section>
     </div><!-- end row -->
     <div class="row m-2">
-      <section id="target" class="h-150 bg-success col-5 offset-md-1">
+      <section id="target" class="h-150 bg-success col-5 col-md-4 offset-md-1">
         <h1>target-0</h1>
       </section>
-      <section id="wins-losses" class="h-150 col-3 col-md-2 offset-1">
-        <div class="row">
-          <div class="col-12">Wins:</div>
-          <div class="col-12">0</div>
+      <section id="record" class="h-150 col-4 col-sm-3 col-md-2 offset-1">
+        <div class="row pt-4">
+          <div class="col-8 col-lg-6">Wins:</div>
+          <div class="col-4 col-lg-6">0</div>
         </div>
-        <div class="row">
-          <div class="col-12">Losses:</div>
-          <div class="col-12">0</div>
+        <div class="row pt-4">
+          <div class="col-8 col-lg-6">Losses:</div>
+          <div class="col-4 col-lg-6">0</div>
         </div>
       </section>
 
     </div><!-- end row -->
     <div class="row m-2">
-      <div id="red-crystal" class="bg-white col-3 col-md-2 offset-md-1">
-        <img src="assets/img/red_crystal.jpg" alt="red crystal" class="crystal">
+      <div id="red-crystal" class="col-3 col-md-2 offset-md-1">
+        <img src="assets/img/red_crystal.jpg" alt="red crystal" id="red" class="crystal">
       </div>
-      <div id="blue-crystal" class="bg-white col-3 col-md-2">
-        <img src="assets/img/blue_crystal.jpg" alt="blue crystal" class="crystal">
+      <div id="blue-crystal" class="col-3 col-md-2">
+        <img src="assets/img/blue_crystal.jpg" alt="blue crystal" id="blue" class="crystal">
       </div>
-      <div id="yellow-crystal" class="bg-white col-3 col-md-2">
-        <img src="assets/img/yellow_crystal.jpg" alt="yellow crystal" class="crystal">
+      <div id="yellow-crystal" class="col-3 col-md-2">
+        <img src="assets/img/yellow_crystal.jpg" alt="yellow crystal" id="yellow" class="crystal">
       </div>
-      <div id="green-crystal" class="bg-white col-3 col-md-2">
-        <img src="assets/img/green_crystal.jpg" alt="green crystal" class="crystal">
+      <div id="green-crystal" class="col-3 col-md-2">
+        <img src="assets/img/green_crystal.jpg" alt="green crystal" id="green" class="crystal">
       </div>
     </div><!-- end row -->
     <div class="row m-2">
