--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- local css -->
   <link rel="stylesheet" href="assets/css/style.css">
-
+  <!-- page title -->
   <title>Jarret Yingling - Crystals Collector</title>
 </head>
 
@@ -29,26 +29,24 @@
               <li class="nav-item active">
                 <a class="nav-link" href="index.html">Crystals Collector<span class="sr-only">(current)</span></a>
               </li>
-              <!--
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-link" href="StarWars.html">Star Wars</a>
               </li>
+              <!--
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
-              -->
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Dropdown
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="index.html">Crystals Collector</a>
-                  <!--
                   <a class="dropdown-item" href="">Game</a>
                   <a class="dropdown-item" href="contact.html">Contact</a>
-                  -->
                 </div>
               </li>
+              -->
             </ul>
           </div>
         </nav>
@@ -64,6 +62,7 @@
         </header>
       </section>
     </div><!-- end row -->
+
     <div class="row m-2">
       <section id="rules" class="text-success bg-light col-md-9 offset-md-1">
         <h3>Rules:</h3>
@@ -74,21 +73,24 @@
         <p>Each time when the game starts, the game will change the values of each crystal.</p>
       </section>
     </div><!-- end row -->
+
     <div class="row m-2">
       <section id="target" class="h-150 bg-success col-5 col-md-4 offset-md-1">
-        <h1>target-0</h1>
+        <h1></h1>
       </section>
       <section id="record" class="h-150 col-4 col-sm-3 col-md-2 offset-1">
-        <div class="row pt-4">
-          <div class="col-8 col-lg-6">Wins:</div>
-          <div class="col-4 col-lg-6">0</div>
+        <div class="row pt-3">
+          <div id="result" class="col-12"></div>
         </div>
-        <div class="row pt-4">
+        <div class="row pt-3">
+          <div class="col-8 col-lg-6">Wins:</div>
+          <div id="wins" class="col-4 col-lg-6">0</div>
+        </div>
+        <div class="row pt-3">
           <div class="col-8 col-lg-6">Losses:</div>
-          <div class="col-4 col-lg-6">0</div>
+          <div id="losses" class="col-4 col-lg-6">0</div>
         </div>
       </section>
-
     </div><!-- end row -->
     <div class="row m-2">
       <div id="red-crystal" class="col-3 col-md-2 offset-md-1">
@@ -104,16 +106,19 @@
         <img src="assets/img/green_crystal.jpg" alt="green crystal" id="green" class="crystal">
       </div>
     </div><!-- end row -->
+
     <div class="row m-2">
       <section id="your-total" class="text-white bg-info align-middle col-6 col-md-5 offset-md-1">
         Your total score is:
       </section>
     </div><!-- end row -->
+
     <div class="row m-2">
       <section id="score" class="h-150 text-white bg-info align-middle col-6 col-md-5 offset-md-1">
-        <h1>score-0</h1>
+        <h1></h1>
       </section>
     </div><!-- end row -->
+
   </div><!-- end container -->
   <footer class="container" role="content info">
     Copyright &copy;
