crystal game completed and partial Star Wars

--- a/StarWars.html
+++ b/StarWars.html
@@ -69,10 +69,10 @@
     <!-- yoda : emporer -->
     <div class="row mt-3 mb-3">
       <div id="light1" class="col-1 offset-md-2">
-        <img src="assets/img/png/yoda.png" alt="Yoda" id="yoda" class="img character light">
+        <img src="assets/img/png/yoda.png" alt="Yoda" id="l1" class="img character light">
       </div>
       <div id="dark1" class="col-1 offset-md-1">
-        <img src="assets/img/png/emperor-palpatine.png" alt="Emperor Palpatine" id="emporer" class="img character dark">
+        <img src="assets/img/png/emperor-palpatine.png" alt="Emperor Palpatine" id="d1" class="img character dark">
       </div>
     </div><!-- end row -->
 
